--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   height: 80px;
   padding-right: 16px;
   text-align: right;
-  font-size: 32px;
+  font-size: 24px;
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 10px 10px 0 0;
 }
@@ -73,7 +73,8 @@ button {
   border-radius: 0 0 10px 0;
 }
 
-.operand {
+.number,
+#btn-decimal {
   background-color: gray;
   color: white;
 }
